--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </style>
 </head>
 <body>
-<a href="v .HTML">Go to index </a>
+<a href="https://timmy2551.github.io/">Go to  </a>
     <div class="image-container">
         <img src="https://github.com/Timmy2551/Timmy.github.io/blob/main/S__9535501.jpg?raw=true">
         <img src="https://github.com/Timmy2551/Timmy.github.io/blob/main/S__9535507.jpg?raw=true">
