--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
     </style>
 </head>
 <body>
+    <div style="text-align: left;">
     <a href="https://timmy2551.github.io/" target="_blank">เปิดหน้า 1</a>
+    </div>
+
+    
     <div class="image-container">
         <img src="https://github.com/Timmy2551/Timmy.github.io/blob/main/S__9535501.jpg?raw=true">
         <img src="https://github.com/Timmy2551/Timmy.github.io/blob/main/S__9535507.jpg?raw=true">
